--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "server": "nodemon backend/server.js",
     "client": "npm run dev --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "npm run build --prefix frontend"
+    "build": "npm run build --prefix frontend",
+    "installClient": "npm i --prefix frontend",
+    "setup": "npm i && npm run installClient && npm run build"
   },
   "author": "",
   "license": "ISC",
