--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.2",
+    "vite": "^4.3.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -35,6 +36,6 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "http-proxy-middleware": "^2.0.6",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    
   }
 }
