--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "http-proxy-middleware": "^2.0.6",
-    "typescript": "^5.0.2",
-    
+    "typescript": "^5.0.2"
   }
 }
